--- a/Banana_project/requirements.txt
+++ b/Banana_project/requirements.txt
@@ -1,7 +1,7 @@
-pip install streamlit as st 
+pip install streamlit
 pip install keras
-pip install numpy as np
-pip install tensorflow as tf
+pip install numpy 
+pip install tensorflow 
 pip install cv2 
 pip install PIL 
 pip install joblib
